Fix search icon alignment

--- a/themes/scss/map/_overlays.scss
+++ b/themes/scss/map/_overlays.scss
@@ -131,6 +131,7 @@ $buttonColor: #636D72;
   @include transition(width, 100ms ease-in);
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 32px;
   height: 100%;
   overflow: hidden;
